[project]
name = "deplixo-mcp"
version = "1.0.0"
description = "MCP server for deploying apps to Deplixo"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
]

[project.scripts]
deplixo-mcp = "server:main"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = ["test_*.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__"]
